<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_name">The Queen\'s Gambit</string>
    <string name="label_creator">Creators:</string>
    <string name="label_actors">Actors:</string>
    <string name="text_description">Story</string>
    <string name="poster_contentDescription">Content Description</string>
    <string name="fab_contentDescription">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="HomeHederText">Welcome to MovieApp!</string>
    <string name="ButtonCardDetail">SEE DETAIL</string>
    <string name="Car1Movie1Title">The Queens\'s Gambit</string>
    <string name="CardMovie2Title">Knives Out</string>
    <string name="CardMovie3Title">Parasite</string>
    <string name="CardMovie1Creators">Scott Frank, Alan Scott</string>
    <string name="CardMovie1Actors">Anya Taylor-Joy, Chloe Pirrie</string>
    <string name="CardMovie2Creator">Rian Johnson</string>
    <string name="CardMovie2Actors">Daniel Craig, Tonie Collette, Ana de Armas</string>
    <string name="CardMovie3Creators">Bong Joon Ho</string>
    <string name="CardMovie3Actors">Kang-ho Song, Lee-Sun-kvun, Yeo-ieong Cho</string>
    <string name="mywatchlistHeaderText">My Watchlist</string>
    <string name="watchlistFragementButton">My Watchlist</string>
    <string name="navigation_drawer_image">An Image</string>
</resources>