<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/HomeHederText"
            android:textColor="@color/gold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Welcome to MovieApp!" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CardMovie1"
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:clipChildren="false"
                    app:cardBackgroundColor="@color/grey_black"
                    app:cardElevation="10dp"
                    app:contentPadding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/cardMovie1Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/Car1Movie1Title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie1Creators"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cardMovie1Creators"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/CardMovie1Creators"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie1Actors"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie1Title" />

                        <TextView
                            android:id="@+id/cardMovie1Actors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/CardMovie1Actors"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie1Button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie1Creators" />

                        <Button
                            android:id="@+id/cardMovie1Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/ButtonCardDetail"
                            app:backgroundTint="@color/gold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie1Actors" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CardMovie2"
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:clipChildren="false"
                    app:cardBackgroundColor="@color/grey_black"
                    app:cardElevation="10dp"
                    app:contentPadding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/cardMovie2Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/CardMovie2Title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie2Creators"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cardMovie2Creators"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/CardMovie2Creator"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie2Actors"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie2Title" />

                        <TextView
                            android:id="@+id/cardMovie2Actors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/CardMovie2Actors"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie2Button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie2Creators" />

                        <Button
                            android:id="@+id/cardMovie2Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/ButtonCardDetail"
                            app:backgroundTint="@color/gold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie2Actors" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CardMovie3"
                    style="@style/Widget.MaterialComponents.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:clipChildren="false"
                    app:cardBackgroundColor="@color/grey_black"
                    app:cardElevation="10dp"
                    app:contentPadding="15dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/cardMovie3Title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/CardMovie3Title"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie3Creators"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/cardMovie3Creators"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/CardMovie3Creators"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie3Actors"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie3Title" />

                        <TextView
                            android:id="@+id/cardMovie3Actors"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/CardMovie3Actors"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toTopOf="@+id/cardMovie3Button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie3Creators" />

                        <Button
                            android:id="@+id/cardMovie3Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@string/ButtonCardDetail"
                            app:backgroundTint="@color/gold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/cardMovie3Actors" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>